feat: implement core domain repositories, DTOs, and services for address book, notes, and boards, with extensive unit test coverage.